--- a/46_APIWithTokenHomework/Base.lproj/Main.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/Main.storyboard
@@ -141,7 +141,9 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="46" id="Jzo-tr-HDy"/>
                                             </constraints>
-                                            <state key="normal" title="Likes:"/>
+                                            <state key="normal" title="Likes:">
+                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
                                             <connections>
                                                 <action selector="actionLikePressed:" destination="cgT-Mk-B48" eventType="touchUpInside" id="EVS-pM-a24"/>
                                             </connections>
@@ -298,21 +300,6 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUJ-NZ-0nM">
-                                            <rect key="frame" x="495" y="373" width="40" height="18"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="126" id="WAo-Wv-wy6"/>
-                                                <constraint firstAttribute="width" constant="40" id="i68-04-kYr"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="WAo-Wv-wy6"/>
-                                                </mask>
-                                            </variation>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XBq-wI-ekf">
                                             <rect key="frame" x="543" y="373" width="49" height="18"/>
                                             <constraints>
@@ -340,15 +327,26 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="voS-bD-YEG">
                                             <rect key="frame" x="8" y="273" width="190" height="92"/>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g21-yv-TyH">
+                                            <rect key="frame" x="489" y="367" width="46" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="46" id="oi8-rE-kWn"/>
+                                            </constraints>
+                                            <state key="normal" title="Likes:">
+                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="actionLikePressed:" destination="c5s-JC-m80" eventType="touchUpInside" id="vFw-OD-CbW"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="aUJ-NZ-0nM" secondAttribute="bottom" constant="0.5" id="2aZ-gu-k4e"/>
-                                        <constraint firstItem="aUJ-NZ-0nM" firstAttribute="top" secondItem="Zqu-VL-kQC" secondAttribute="bottom" constant="8" id="36Q-Pm-qbB"/>
                                         <constraint firstItem="2JA-uZ-Tki" firstAttribute="leading" secondItem="KsP-la-fqV" secondAttribute="trailing" constant="8" id="3Ra-lG-izN"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="3fv-PW-0GD" secondAttribute="trailing" id="6Vn-WY-YFn"/>
                                         <constraint firstItem="Zqu-VL-kQC" firstAttribute="leading" secondItem="wLh-F4-Dob" secondAttribute="trailing" constant="7" id="6WD-C3-7Nu"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="2JA-uZ-Tki" secondAttribute="trailing" id="8KY-ic-9h2"/>
                                         <constraint firstAttribute="bottom" secondItem="XBq-wI-ekf" secondAttribute="bottom" constant="8.5" id="8Sx-NH-MmX"/>
+                                        <constraint firstAttribute="bottom" secondItem="g21-yv-TyH" secondAttribute="bottom" constant="2.5" id="B1Z-If-Aqe"/>
                                         <constraint firstItem="zXs-d0-NFX" firstAttribute="leading" secondItem="ftP-KC-nFC" secondAttribute="leading" constant="8" id="CYI-f4-RUG"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="sgt-cA-Y5F" secondAttribute="trailing" id="Elt-H3-zpg"/>
                                         <constraint firstItem="JPC-Pq-PbW" firstAttribute="top" secondItem="3fv-PW-0GD" secondAttribute="bottom" constant="8" id="Eqi-S1-JZX"/>
@@ -356,6 +354,7 @@
                                         <constraint firstItem="KsP-la-fqV" firstAttribute="leading" secondItem="ftP-KC-nFC" secondAttribute="leading" constant="8" id="HZb-Te-BUF"/>
                                         <constraint firstItem="3fv-PW-0GD" firstAttribute="top" secondItem="KsP-la-fqV" secondAttribute="bottom" constant="8" id="IYn-SW-ORD"/>
                                         <constraint firstItem="wLh-F4-Dob" firstAttribute="leading" secondItem="voS-bD-YEG" secondAttribute="trailing" constant="7" id="Kci-wr-29D"/>
+                                        <constraint firstItem="XBq-wI-ekf" firstAttribute="leading" secondItem="g21-yv-TyH" secondAttribute="trailing" constant="8" id="OTg-ho-ZMJ"/>
                                         <constraint firstItem="wLh-F4-Dob" firstAttribute="top" secondItem="JPC-Pq-PbW" secondAttribute="bottom" constant="8" id="POa-cS-9eL"/>
                                         <constraint firstItem="Zqu-VL-kQC" firstAttribute="top" secondItem="JPC-Pq-PbW" secondAttribute="bottom" constant="8" id="Q8N-ZV-QIA"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="Zqu-VL-kQC" secondAttribute="trailing" id="QTq-0E-tI8"/>
@@ -372,7 +371,7 @@
                                         <constraint firstItem="IRz-Zp-z6W" firstAttribute="top" secondItem="JPC-Pq-PbW" secondAttribute="bottom" constant="8" id="atJ-jf-fvC"/>
                                         <constraint firstItem="JPC-Pq-PbW" firstAttribute="centerX" secondItem="ftP-KC-nFC" secondAttribute="centerX" id="cAg-tT-3bV"/>
                                         <constraint firstItem="sgt-cA-Y5F" firstAttribute="leading" secondItem="KsP-la-fqV" secondAttribute="trailing" constant="8" id="dQF-hg-i1k"/>
-                                        <constraint firstItem="aUJ-NZ-0nM" firstAttribute="top" secondItem="JPC-Pq-PbW" secondAttribute="bottom" constant="8" id="fDC-xx-5oE"/>
+                                        <constraint firstItem="g21-yv-TyH" firstAttribute="top" secondItem="Zqu-VL-kQC" secondAttribute="bottom" constant="2" id="eb0-jW-Eej"/>
                                         <constraint firstAttribute="leadingMargin" secondItem="3fv-PW-0GD" secondAttribute="leading" id="h2G-zI-ZGj"/>
                                         <constraint firstItem="sgt-cA-Y5F" firstAttribute="top" secondItem="2JA-uZ-Tki" secondAttribute="bottom" constant="8" id="kkG-Oq-mD6"/>
                                         <constraint firstItem="IRz-Zp-z6W" firstAttribute="leading" secondItem="zXs-d0-NFX" secondAttribute="trailing" constant="8" id="orL-q0-Fbv"/>
@@ -380,7 +379,6 @@
                                         <constraint firstItem="zXs-d0-NFX" firstAttribute="top" secondItem="3fv-PW-0GD" secondAttribute="bottom" constant="8" id="sPM-Ru-g2N"/>
                                         <constraint firstAttribute="bottom" secondItem="zXs-d0-NFX" secondAttribute="bottom" constant="8.5" id="sdT-Rh-lsF"/>
                                         <constraint firstAttribute="topMargin" secondItem="2JA-uZ-Tki" secondAttribute="top" id="skF-yx-Rzp"/>
-                                        <constraint firstItem="XBq-wI-ekf" firstAttribute="leading" secondItem="aUJ-NZ-0nM" secondAttribute="trailing" constant="8" id="tRe-mG-4CF"/>
                                         <constraint firstItem="KsP-la-fqV" firstAttribute="top" secondItem="ftP-KC-nFC" secondAttribute="top" constant="8" id="uy4-eh-uts"/>
                                         <constraint firstAttribute="leadingMargin" secondItem="voS-bD-YEG" secondAttribute="leading" id="yEh-3x-O3U"/>
                                     </constraints>
@@ -391,7 +389,6 @@
                                             <exclude reference="atJ-jf-fvC"/>
                                             <exclude reference="orL-q0-Fbv"/>
                                             <exclude reference="WF3-Tc-reV"/>
-                                            <exclude reference="fDC-xx-5oE"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
